# GuitarAmpIR

./: .gitignore  CMakeLists.txt  README.md
Source/: AmpProcessor.cpp  AmpProcessor.h  ConvolutionEngine.cpp  ConvolutionEngine.h  IRLoader.cpp  IRLoader.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
cmake/: LV2Support.cmake
